# momentum-core

./: .env.template  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  LICENSE  README.md  alembic.ini  docker-compose.yaml  dockerfile  firebase_service_account.template.json  requirements.txt  run-momentum.sh  setup_gcloud.sh  start_momentum.sh
server/: auth.py  blast_radius_detection.py  celery_worker.py  change_detection.py  dependencies.py  endpoint_detection.py  firebase_setup.py  main.py  parse.py  plan.py  projects.py  pyproject.toml  router.py
server/alembic/: env.py
server/api/: deps.py  project_api.py
server/config/: __init__.py  db_settings.py
server/crud/: crud_utils.py
server/db/: session.py
server/handler/: auth_handler.py  user_handler.py
server/key_management/: secret_manager.py
server/knowledge_graph/: flow.py  knowledge_graph.py
server/models/: auth.py  generate_tests.py  login_request.py  repo_details.py  signup_request.py  user.py
server/routers/: webhook.py
server/schema/: endpoints.py  explanation.py  projects.py  pydantic.py  user_subscription_detail.py  users.py
server/schemas/: __init__.py  endpoints.py  explanation.py  inference.py  projects.py  pydantic.py  user_subscription_detail.py  user_test_details.py  users.py
server/test_agent/: agents.py  crew.py  tasks.py  tools.py
server/utils/: APIRouter.py  ai_helper.py  auth_service.py  config.py  firestore_helper.py  github_helper.py  graph_db_helper.py  local_git_service.py  model_helper.py  mongo_helper.py  parse_helper.py  posthog_middleware.py  user_service.py  (+1 more)
(+59 files in other folders)
